// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<svg
  class="AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M0.5 0C0.223858 0 0 0.223858 0 0.5V23.5C0 23.7761 0.223858 24 0.5 24H19.5C19.7761 24 20 23.7761 20 23.5V6.5C20 6.36739 19.9473 6.24021 19.8536 6.14645L13.8536 0.146447C13.7598 0.0526784 13.6326 0 13.5 0H0.5ZM1 23V1H13V6.5C13 6.77614 13.2239 7 13.5 7H19V23H1ZM18.2929 6L14 1.70711V6H18.2929Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M6 1H5V7H6V8H7V9H6V10H7V11H6V12H7V13H6V14H7V15H6V16H7V17H6V18H7V19H9V18H8V17H9V16H8V15H9V14H8V13H9V12H8V11H9V10H8V9H9V8H8V7H9V1H8V6H6V5H7V4H6V1Z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<svg
  class="extra-class-name AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M0 0.5C0 0.223858 0.223858 0 0.5 0H22.5C22.7761 0 23 0.223858 23 0.5V3.5C23 3.77614 22.7761 4 22.5 4H0.5C0.223858 4 0 3.77614 0 3.5V0.5ZM1 1V3H22V1H1Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M0.0209961 17.5C0.0209961 17.2239 0.244854 17 0.520996 17H22.479C22.7551 17 22.979 17.2239 22.979 17.5C22.979 17.7761 22.7551 18 22.479 18H0.520996C0.244854 18 0.0209961 17.7761 0.0209961 17.5Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M2 3.5C2 3.22386 2.22386 3 2.5 3H20.5C20.7761 3 21 3.22386 21 3.5V17.5C21 17.7761 20.7761 18 20.5 18H12V20.5H11V18H2.5C2.22386 18 2 17.7761 2 17.5V3.5ZM3 4V17H20V4H3Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M11.5 21C10.9477 21 10.5 21.4477 10.5 22C10.5 22.5523 10.9477 23 11.5 23C12.0523 23 12.5 22.5523 12.5 22C12.5 21.4477 12.0523 21 11.5 21ZM9.5 22C9.5 20.8954 10.3954 20 11.5 20C12.6046 20 13.5 20.8954 13.5 22C13.5 23.1046 12.6046 24 11.5 24C10.3954 24 9.5 23.1046 9.5 22Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M10.2683 7.78495C10.4332 7.69869 10.6323 7.71116 10.7852 7.8173L14.0572 10.0893C14.1917 10.1827 14.272 10.3362 14.272 10.5C14.272 10.6638 14.1917 10.8173 14.0572 10.9107L10.7852 13.1827C10.6323 13.2888 10.4332 13.3013 10.2683 13.2151C10.1034 13.1288 10 12.9581 10 12.772V8.228C10 8.0419 10.1034 7.8712 10.2683 7.78495ZM11 9.18391V11.8161L12.8954 10.5L11 9.18391Z"
    fill-rule="evenodd"
  />
  <path
    clip-rule="evenodd"
    d="M11.5 6C9.01472 6 7 8.01472 7 10.5C7 12.9853 9.01472 15 11.5 15C13.9853 15 16 12.9853 16 10.5C16 8.01472 13.9853 6 11.5 6ZM6 10.5C6 7.46243 8.46243 5 11.5 5C14.5376 5 17 7.46243 17 10.5C17 13.5376 14.5376 16 11.5 16C8.46243 16 6 13.5376 6 10.5Z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`renders the component with type pdf 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
}

<svg
  class="extra-class-name AssetIcon emotion-0"
  data-test-id="cf-ui-asset-icon"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    clip-rule="evenodd"
    d="M0 0.5C0 0.223858 0.223858 0 0.5 0H13.5C13.6326 0 13.7598 0.0526784 13.8536 0.146447L19.8536 6.14645C19.9473 6.24021 20 6.36739 20 6.5V23.5C20 23.7761 19.7761 24 19.5 24H0.5C0.223858 24 0 23.7761 0 23.5V0.5ZM1 1V23H19V7H13.5C13.2239 7 13 6.77614 13 6.5V1H1ZM14 1.70711L18.2929 6H14V1.70711ZM4 14.5C4 14.2239 4.22386 14 4.5 14H5.75C6.21413 14 6.65925 14.1844 6.98744 14.5126C7.31563 14.8408 7.5 15.2859 7.5 15.75C7.5 16.2141 7.31563 16.6592 6.98744 16.9874C6.65925 17.3156 6.21413 17.5 5.75 17.5H5V19.499C5 19.7751 4.77614 19.999 4.5 19.999C4.22386 19.999 4 19.7751 4 19.499V14.5ZM5.75 16.5C5.94891 16.5 6.13968 16.421 6.28033 16.2803C6.42098 16.1397 6.5 15.9489 6.5 15.75C6.5 15.5511 6.42098 15.3603 6.28033 15.2197C6.13968 15.079 5.94891 15 5.75 15H5V16.5H5.75ZM8.5 14.5C8.5 14.2239 8.72386 14 9 14H10C11.5274 14 12.5 15.4029 12.5 17C12.5 18.5971 11.5274 20 10 20H9C8.72386 20 8.5 19.7761 8.5 19.5V14.5ZM10 19C10.7766 19 11.5 18.2669 11.5 17C11.5 15.7331 10.7766 15 10 15H9.5V19H10ZM14.0126 14H16.5126C16.5126 14 17.0126 14 17.0126 14.5C17.0126 15 16.5126 15 16.5126 15H14.5126V16H15.5126C15.5126 16 16.0126 16.0134 16.0126 16.5C16.0126 16.9866 15.5126 17 15.5126 17H14.5126V19.5C14.5126 19.5 14.5126 20 14.0126 20C13.5126 20 13.5126 19.5 13.5126 19.5C13.5126 19.5 13.4874 15.0268 13.5 14.5134C13.5126 14 14.0126 14 14.0126 14Z"
    fill-rule="evenodd"
  />
</svg>
`;
